# travian

./: .gitignore  AUTHORS  CHANGELOG.md  LICENSE  Makefile  README.md  cloudbuild.yaml  ecstatic-motif-393807-8691b4776d07.json  perso.txt
travian/backend/: .env  .env.local  .pylintrc  Dockerfile  asgi.py  cloudbuild-migrate.yaml  pyproject.toml  requirements.txt  tmp.py
travian/backend/app/: initial_data.py  main.py  sample_data.py  seed.py
travian/backend/app/alembic/: env.py
travian/backend/app/alembic/versions/: 02ea4ed60233_init_schema.py  04cee76d7b4d_init_schema.py  0727eca25963_init_schema.py  09cfcdaca510_init_schema.py  0ced9ecd6281_init_schema.py  1441d16034f1_init_schema.py  1ff989b9872a_init_schema.py  22532f892a08_init_schema.py  2660694a469a_add_villageresourcestorage_and_.py  270436073b31_update_village_farms_transaction_table.py  2a9e66530ecb_init_schema.py  2f7bdba63326_init_schema.py  30d1b94d44e1_init_schema.py  32aa091cc808_init_schema.py  338661200c1b_init_schema.py  3711dc9203a4_init_schema.py  3de60a2a71fb_init_schema.py  48d91eb43dd8_init_schema.py  4a2ca894ddef_init_schema.py  5086920271d7_init_schema.py  5230bf652b17_init_schema.py  5b81f7e9caee_init_schema.py  5cee10a368f8_init_schema.py  600646ff51de_init_schema.py  651cea824b9f_init_schema.py  6b0fac79bd74_init_schema.py  6f768506598b_init_schema.py  72eeccadc09c_init_schema.py  73105bd4e175_init_schema.py  7880a921b94c_init_schema.py  7c964b110fb7_init_schema.py  8395ffd2f91b_init_schema.py  850c36941e54_init_schema.py  8a988076070c_init_schema.py  8df35eef0d35_init_schema.py  (+41 more)
travian/backend/app/config/: game_config.yaml
travian/backend/app/core/: auth.py  config.py  config_loader.py
travian/backend/app/db/: crud.py  models.py  schemas.py
travian/backend/app/repositories/: building_repo.py  user_repo.py
travian/backend/app/schemas/: building.py  map.py  resource.py
travian/backend/app/services/: building_service.py  resource_service.py  user_service.py
travian/backend/src/: __init__.py  tmp.py
travian/backend/src/core/: auth.py  config.py  exceptions.py  security.py  user.py
travian/backend/src/db/: conn.py  utils.py
travian/backend/src/game/: init.py  server.py  settings.py
vallorium/backend/: Dockerfile  Dockerfile.migrate  pyproject.toml  requirements-migrate.txt
vallorium/backend/app/config/: main.py
vallorium/backend/app/core/: auth.py  config.py  crypto.py  security.py
vallorium/backend/app/db/: models.py
vallorium/backend/app/repositories/: building_repo.py  resource_repo.py  tribe_repo.py  village_repo.py
vallorium/backend/app/schemas/: auth.py  base.py  building.py  resource.py  tribe.py  user.py  village.py
vallorium/backend/app/services/: building_service.py  tribe_service.py  village_service.py
vallorium/backend/app/utils/: __init__.py  caching.py  responses.py
(+430 files in other folders)
