[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Pierre-Alexandre35 <46579114+pamousset75@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
uvicorn = "^0.17.6"
fastapi = "^0.78.0"
psycopg2 = "^2.9.3"
python-multipart = "^0.0.5"
PyJWT = "^2.4.0"
python-dotenv = "^1.0.1"
python-jose = "^3.3.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^24.10.0"
autopep8 = "^2.0.0"
bandit = "^1.7.10"

isort = "^5.13.2"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
foo = 'asgi:__main__'
